--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,12 @@
 
-#about-me-heading {
-	color: teal;
+#about-me-heading, #contact-me-heading, #portfolio-page-heading {
+	color: #4aaaa5;
+	font-family: 'Georgia', Times, Times New Roman, serif;
 	opacity: 0.7;
 	margin-bottom: 14px;
+}
+
+#about-me-heading, #contact-me-heading {
 	padding-top: 20px;
 }
 
@@ -17,14 +21,14 @@
 
 #all-pages-footer {
 	background-color: #666666;
-	color: white;
+	color: #777777;
 	margin-top: 5px;
 	padding-top: 10px;
 	text-align: center;
 }
 
 #all-pages-footer, .contact-form-label, .home-page-nav-link {
-	font-family: "Arial", Helvetica, sans-serif;
+	font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 12px;
 }
 
@@ -49,46 +53,67 @@ body {
 	width: 643px;
 }
 
-#contact-me-heading {
-	color: teal;
-	opacity: 0.7;
-	margin-bottom: 14px;
-	padding-top: 20px;
+#contact-page-article, #home-page-article {
+	border-color: #dddddd;
+	margin-bottom: 54px;
+	margin-top: 24px;
 }
 
-#contact-page-article {
-	background-color: white;
+#contact-page-article, #home-page-article, #portfolio-page-article {
+	background-color: #ffffff;
 	height: 400px;
-	margin-bottom: 58px;
 	margin-left: 100px;
 	margin-right: 100px;
-	margin-top: 20px;
 	padding-left: 16px;
 	padding-right: 16px;
 }
 
+#contact-page-main-content, #home-page-main-content {
+	background: lightgray;
+	height: 480px;
+	width: 882px;
+}
+
+#estes-nightscapes-caption, #flixster-caption {
+	color: #777777;
+	opacity: 0.8;
+	position: absolute;
+	text-align: center;
+}
+
+#estes-nightscapes-caption {
+	margin-left: 3px;
+	top: 207px;
+	width: 236px;
+}
+
+#estes-nightscapes-caption, #flixster-caption, #home-page-name-block, #portfolio-rule-at-bottom-of-main, #rule-at-bottom-of-main {
+	background-color: #4aaaa5;
+}
+
 #experience-bullets-header {
-	float: right;
 	margin-bottom: 0;
 	margin-right: 172px;
 	margin-top: 0;
 }
 
-#experience-bullets-list {
+#experience-bullets-header, #experience-bullets-list {
 	float: right;
+}
+
+#experience-bullets-list {
 	margin-right: 282px;
 	margin-top: 8px;
 }
 
-#home-page-article {
-	background-color: white;
-	height: 400px;
-	margin-bottom: 54px;
-	margin-left: 100px;
-	margin-right: 100px;
-	margin-top: 24px;
-	padding-left: 16px;
-	padding-right: 16px;
+#firs-reaching-figure, #framus-on-stage-figure {
+	margin: 0;
+}
+
+#flixster-caption {
+	margin-left: 8px;
+	top: 443px;
+	width: 383px;
 }
 
 #home-page-article-first-para {
@@ -98,14 +123,7 @@ body {
 	max-width: 400px;
 }
 
-#contact-page-main-content, #home-page-main-content {
-	background: lightgray;
-	height: 480px;
-	width: 882px;
-}
-
 #home-page-name-block {
-	background-color: teal;
 	color: white;
 	font-size: 26px;
 	margin-bottom: 0;
@@ -141,14 +159,43 @@ body {
 	text-decoration: none;
 }
 
+#portfolio-page-article {
+	height: 460px;
+}
+
+.portfolio-page-left-cell {
+	margin-left: 3px;
+	margin-right: 10px;
+}
+
+#portfolio-page-main-content {
+	background: lightgray;
+	height: 500px;
+	width: 882px;
+}
+
+.portfolio-page-right-cell {
+	margin-left: 8px;
+}
+
+#portfolio-page-heading {
+	padding-top: 16px;
+}
+
+#portfolio-rule-at-bottom-of-main {
+	border: none;
+	margin-top: 18px;
+	height: 5px;
+}
+
 #rule-at-bottom-of-main {
-	background-color: teal;
 	border: none;
 	margin: 0;
 	height: 5px;
 }
 
 #rule-at-top-of-main {
+	color: #cccccc;
 	margin: 0;
 	opacity: 0.67;
 }
