--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,19 +21,19 @@
 
 #all-pages-footer {
 	background-color: #666666;
-	color: #777777;
+	color: #cccccc;
 	margin-top: 5px;
 	padding-top: 10px;
 	text-align: center;
 }
 
-#all-pages-footer, .contact-form-label, .home-page-nav-link {
+#all-pages-footer, .contact-form-label, #estes-nightscapes-caption, #flixster-caption, .home-page-nav-link {
 	font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 12px;
 }
 
-body {
-	width: 882px;
+body, #contact-page-main-content, #home-page-main-content, #portfolio-page-main-content {
+	width: 960px;
 }
 
 #clear-just-above-main, #clear-just-below-first-para {
@@ -46,22 +46,26 @@ body {
 }
 
 #contact-form-email-input, #contact-form-name-input {
-	width: 645px;
+	width: 723px;
+}
+
+.contact-form-label {
+	margin-left: 1px;
 }
 
 #contact-form-msg-input {
-	width: 643px;
+	width: 721px;
 }
 
 #contact-page-article, #home-page-article {
 	border-color: #dddddd;
+	height: 400px;
 	margin-bottom: 54px;
 	margin-top: 24px;
 }
 
 #contact-page-article, #home-page-article, #portfolio-page-article {
 	background-color: #ffffff;
-	height: 400px;
 	margin-left: 100px;
 	margin-right: 100px;
 	padding-left: 16px;
@@ -71,18 +75,17 @@ body {
 #contact-page-main-content, #home-page-main-content {
 	background: lightgray;
 	height: 480px;
-	width: 882px;
 }
 
 #estes-nightscapes-caption, #flixster-caption {
-	color: #777777;
+	color: white;
 	opacity: 0.8;
 	position: absolute;
 	text-align: center;
 }
 
 #estes-nightscapes-caption {
-	margin-left: 3px;
+	margin-left: 28px;
 	top: 207px;
 	width: 236px;
 }
@@ -93,16 +96,21 @@ body {
 
 #experience-bullets-header {
 	margin-bottom: 0;
-	margin-right: 172px;
-	margin-top: 0;
+	margin-right: 236px;
+	margin-top: 6px;
 }
 
 #experience-bullets-header, #experience-bullets-list {
 	float: right;
 }
 
+#experience-bullets-header, #experience-bullets-list, #home-page-article-first-para {
+	font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+	font-size: 15px;
+}
+
 #experience-bullets-list {
-	margin-right: 282px;
+	margin-right: 346px;
 	margin-top: 8px;
 }
 
@@ -111,16 +119,16 @@ body {
 }
 
 #flixster-caption {
-	margin-left: 8px;
+	margin-left: 22px;
 	top: 443px;
 	width: 383px;
 }
 
 #home-page-article-first-para {
 	float: right;
-	margin-bottom: 12px;
-	margin-right: 12px;
-	max-width: 400px;
+	margin-bottom: 20px;
+	margin-right: 26px;
+	max-width: 456px;
 }
 
 #home-page-name-block {
@@ -139,7 +147,7 @@ body {
 }
 
 #home-page-about-link {
-	margin-left: 296px;
+	margin-left: 374px;
 }
 
 #home-page-footer-text {
@@ -163,23 +171,26 @@ body {
 	height: 460px;
 }
 
+#portfolio-page-heading {
+	padding-top: 16px;
+}
+
 .portfolio-page-left-cell {
-	margin-left: 3px;
-	margin-right: 10px;
+	margin-left: 28px;
+	margin-right: 22px;
 }
 
 #portfolio-page-main-content {
 	background: lightgray;
 	height: 500px;
-	width: 882px;
 }
 
 .portfolio-page-right-cell {
-	margin-left: 8px;
+	margin-left: 22px;
 }
 
-#portfolio-page-heading {
-	padding-top: 16px;
+#portfolio-page-table {
+	margin-top: 16px;
 }
 
 #portfolio-rule-at-bottom-of-main {
@@ -206,4 +217,8 @@ body {
 
 #rule-just-below-contact-me {
 	margin-bottom: 12px;
+}
+
+#rule-just-below-portfolio-heading {
+	opacity: 0.2;
 }
