--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,7 @@
 
 #all-pages-footer {
 	background-color: #666666;
+	border-top: 8px solid #4aaaa5;
 	color: #cccccc;
 	padding-top: 10px;
 	text-align: center;
