Added CSS reset.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,8 @@
 	background-color: #666666;
 	border-top: 8px solid #4aaaa5;
 	color: #cccccc;
-	padding-top: 10px;
+	padding-bottom: 4px;
+	padding-top: 24px;
 	text-align: center;
 }
 
